# ParProg

./: .gitignore  CMakeLists.txt  README.md  clear.sh
.cache/clangd/index/: benchmark.hpp.64C1B51C5A6F4DEB.idx  mpi_communication.cpp.EA916A5E2D1A1838.idx  pi_calculation.cpp.F4CDE6DB104B1629.idx  pipe_communication.cpp.CBD0DE6060929BC4.idx  sort_compare.cpp.4DBF9F742DD5EC6C.idx  sorters.hpp.667CC70EDA2A25C0.idx  thread_communication.cpp.072A793E2D09BDE8.idx
Additional/: CMakeLists.txt  sequential_access.cpp
Lab1/Admission/: CMakeLists.txt  communication_time.cpp  test1.sh  test2.sh
Lab1/Task/: CMakeLists.txt  main.cpp  plot.py  run.py  run.sh
Lab2/Admission/: CMakeLists.txt  main  main.cpp  pipe_communication.cpp  plot.py  sort_compare.cpp  sorters.cpp  sorters.h  sorters.hpp  thread_communication.cpp
Lab2/Task/: CMakeLists.txt  common_benchmark.hpp  parallel_integral.cpp  pipe_communication.cpp  thread_communication.cpp
Term6/: CMakeLists.txt
Term6/Additional/: sequential_access.cpp
Term6/Lab1/: CMakeLists.txt
Term6/Lab1/Admission/: CMakeLists.txt  pi_calculation.cpp
Term6/Lab1/Task/: transport_equation.cpp
Term6/Lab2/: CMakeLists.txt
Term6/Lab2/Admission/: CMakeLists.txt
Term7/: CMakeLists.txt
Term7/Lab3/: CMakeLists.txt  strassen.cpp
Term7/Lab4/: CMakeLists.txt  counter.cpp  spinlock.cpp
include/: benchmark.hpp  common_benchmark.hpp  counter.hpp  matrix.hpp  spinlock.hpp
